<resources>
    <string name="app_name">Hall Admin</string>
    <string name="availability">Availability</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">forgot password</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an Account? </string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="admin_login">Admin Login</string>
    <string name="Business_Name">Business Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account? </string>
    <string name="admin_signup">Admin SignUp</string>


</resources>