<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/item_availability"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/availability" />
    <item
        android:id="@+id/item_booking"
        android:enabled="true"
        android:icon="@drawable/ic_booking_list"
        android:title="@string/booking" />
    <item
        android:id="@+id/item_chat"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="Messages" />
    <item
        android:id="@+id/item_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />
</menu>